fix footer visibility

--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -28,9 +28,12 @@ ul {
   width: 100%;
   box-sizing: border-box;
   position: relative;
-  top: 5em;
+  $post-body-offset: 5em;
+  top: $post-body-offset;
+  margin-bottom: $post-body-offset*1.2;
   @include tablet {
-    top: -5em;
+    top: -$post-body-offset;
+    margin-bottom: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
